@@ -29,10 +29,24 @@ public abstract class AbstractSkyveMojo extends AbstractMojo {
     @Component
     protected Prompter prompter;
 
+    /**
+     * Adds the project's test classpath to the current thread context class loader.
+     *
+     * <p>Side effects: replaces the context class loader for the current thread with a loader that can see the
+     * project's test output, dependencies, and optionally the supplied source directory.
+     */
     protected void configureClasspath() throws DependencyResolutionRequiredException, MalformedURLException {
     	configureClasspath(null);
     }
     
+	/**
+	 * Adds the project's test classpath and the supplied source directory to the current thread context class loader.
+	 *
+	 * <p>Side effects: replaces the context class loader for the current thread. Callers must ensure the new loader
+	 * remains valid for the remainder of the mojo execution.
+	 *
+	 * @param srcDir optional source directory to add to the classpath; may be {@code null}
+	 */
 	protected void configureClasspath(String srcDir) throws DependencyResolutionRequiredException, MalformedURLException {
         final Collection<String> elements = project.getTestClasspathElements();
         final List<URL> listUrl = new ArrayList<>(elements.size() + 1);
@@ -49,6 +63,13 @@ public abstract class AbstractSkyveMojo extends AbstractMojo {
         Thread.currentThread().setContextClassLoader(newClassLoader);
     }
 
+    /**
+     * Locates a Skyve source subdirectory beneath one of the project's compile source roots.
+     *
+     * @param directoryName the directory name to search for, such as {@code modules} or {@code customers}
+     * @return the first matching path
+     * @throws FileNotFoundException if the directory cannot be found under any compile source root
+     */
     protected Path getSkyveDirectory(String directoryName) throws FileNotFoundException {
         for (final String sourceRoot : project.getCompileSourceRoots()) {
             final Path sourceDirectory = Paths.get(sourceRoot, directoryName);
@@ -60,18 +81,36 @@ public abstract class AbstractSkyveMojo extends AbstractMojo {
         throw new FileNotFoundException(String.format("Failed to find %s directory.", directoryName));
     }
 
+    /**
+     * Locates the project's {@code modules} source directory.
+     *
+     * @return the modules directory
+     * @throws FileNotFoundException if the directory cannot be found
+     */
     protected Path getModulesDirectory() throws FileNotFoundException {
         return getSkyveDirectory("modules");
     }
 
+    /**
+     * Locates the project's {@code customers} source directory.
+     *
+     * @return the customers directory
+     * @throws FileNotFoundException if the directory cannot be found
+     */
     protected Path getCustomersDirectory() throws FileNotFoundException {
         return getSkyveDirectory("customers");
     }
 
+    /**
+     * Returns the immediate subdirectories beneath the supplied customers directory.
+     *
+     * @param customersDirectory the directory that contains customer subdirectories
+     * @return the customer directories in filesystem order
+     */
     protected static List<File> getCustomerDirectories(Path customersDirectory) {
         return Arrays.stream(customersDirectory.toFile().listFiles())
                 .filter(File::isDirectory)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected String getDefaultOrPromptCustomer(String defaultCustomer) throws FileNotFoundException, PrompterException {
@@ -104,6 +143,14 @@ public abstract class AbstractSkyveMojo extends AbstractMojo {
         return customerDirectory.getName();
     }
 
+    /**
+     * Returns the configured value or prompts the user when the configuration is blank.
+     *
+     * @param defaultValue the configured value; may be blank
+     * @param promptMessage the prompt shown when the configured value is blank
+     * @return the resolved value
+     * @throws PrompterException if prompting fails
+     */
     protected String getDefaultOrPrompt(String defaultValue, String promptMessage) throws PrompterException {
     	String processedDefaultValue = Util.processStringValue(defaultValue);
     	if (processedDefaultValue != null) {
